# eol-check

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README_zh.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
docs/: SPECIFICATION.md  architecture.md
end_of_life_checker/: __main__.py  cli.py  core.py
end_of_life_checker/api/: __init__.py  endoflife_client.py
end_of_life_checker/parsers/: __init__.py  base.py  java.py  nodejs.py  python.py
end_of_life_checker/reporters/: __init__.py  csv_reporter.py  html_reporter.py  json_reporter.py  text.py
end_of_life_checker/utils/: __init__.py  cache.py  logger.py  version.py
eol_check/: __init__.py  __main__.py  cli.py  core.py  ui.py
eol_check/api/: endoflife_client.py
eol_check/parsers/: __init__.py  java.py  nodejs.py  python.py
eol_check/reporters/: __init__.py  base.py  csv_reporter.py  html_reporter.py  json_reporter.py  text.py
eol_check/ui/: __init__.py  main.py
eol_check/ui/tabs/: __init__.py  about.py  cache_management.py  check_project.py
eol_check/ui/utils/: __init__.py  cache_utils.py
eol_check/utils/: cache.py  request_pool.py  time_parser.py
